--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemon Information</title>
         <link href="style.css" rel="stylesheet">
-
-
+        <link rel="preconnect" href="https://pokeapi.co">
     </head>
 
     <body>
@@ -20,8 +19,6 @@
         <div id="pokemon-details"></div>
 
     </body>
-
-
     <script defer>
         async function getPokemonData() {
             const messageElement = document.getElementById("messages");
