Misspelt favico. and added it to pages so it shows on GH

--- a/evolutions.html
+++ b/evolutions.html
@@ -5,11 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokémon Evolution Chain</title>
-        <link rel="stylesheet" href="evolutions.css"> <!-- Link to external CSS -->
+        <link rel="stylesheet" href="evolutions.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     </head>
 
     <body>
-        <!-- Navbar -->
+
         <nav id="navigation">
             <input type="checkbox" id="hamburger-toggle" class="hamburger-toggle">
             <label for="hamburger-toggle" class="hamburger-icon">&#9776;</label>
@@ -18,7 +20,6 @@
             </ul>
         </nav>
 
-        <!-- Main Content -->
         <div class="container">
             <h1>Pokémon Evolution Chain</h1>
             <form id="search-form">
@@ -27,11 +28,11 @@
                 <button type="submit" id="search-button">Search</button>
             </form>
             <div id="evolution-chain">
-                <div class="loader"></div> <!-- Loading spinner -->
+                <div class="loader"></div>
             </div>
         </div>
 
-        <script src="evolutions.js"></script> <!-- Link to external JavaScript -->
+        <script src="evolutions.js"></script>
     </body>
 
 </html>
