--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Pokemon Information</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://pokeapi.co">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     </head>
 
     <body>
