Tweaked loader position in html so that it is now outside evolution chain div, meaning it will not get cleared when evolution chain is being built via js. Also added html and css for noscript message

--- a/evolutions.html
+++ b/evolutions.html
@@ -28,7 +28,9 @@
                 <button type="submit" id="search-button">Search</button>
             </form>
             <div id="evolution-chain">
-                <div class="loader"></div>
+                <noscript>
+                    <div class="alert">This tool requires javascript to be enabled.</div>
+                </noscript>
             </div>
         </div>
 
